# fourfour

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  shed.toml  waveform-dev
analysis/: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
analysis/src/fourfour_analysis/: __init__.py  __main__.py  analyze.py  audio_io.py  benchmark.py  bpm.py  cache.py  cli.py  compare.py  config.py  energy.py  groundtruth.py  key.py  manifest.py  pwv7_research.py  runner.py  scoring.py  types.py  waveform.py
analysis/src/fourfour_analysis/backends/: __init__.py  base.py  deeprhythm_essentia.py  essentia_key.py  essentia_waveform.py  final_stack.py  lexicon_bpm.py  lexicon_cues.py  lexicon_energy.py  lexicon_key.py  lexicon_port.py  lexicon_waveform.py  librosa_waveform.py  python_stack.py  registry.py  stratum_dsp.py
analysis/tests/: conftest.py  test_analyze.py  test_audio_io.py  test_benchmark.py  test_bpm.py  test_cache.py  test_cli.py  test_compare.py  test_energy.py  test_groundtruth.py  test_key.py  test_lexicon_bpm.py  test_lexicon_cues.py  test_lexicon_energy.py  test_lexicon_key.py  test_lexicon_waveform.py  test_manifest.py  test_scoring.py  test_waveform.py  test_waveform_pioneer.py
analysis/tests/fixtures/: generate.py
benchmark/: README.md
benchmark/baselines/: rekordbox-testdata-2025.json
benchmark/manifests/: beatport-edm-key-keyonly-200.corpus.json  beatport-edm-key-keyonly-clean-full.corpus.json  rekordbox-testdata-2025-batch100.corpus.json  rekordbox-testdata-2025-key160.corpus.json  rekordbox-testdata-2025-quick60.corpus.json  rekordbox-testdata-2025.corpus.json  test-e2e.corpus.json
benchmark/scripts/: cli_batch_analyze.py
docs/: analysis-cli-build-plan.md  analysis-pipeline-handoff.md  benchmark-implementation-plan.md  cdj-crash-investigation-findings.md  experimentation-path.md  key-detection-benchmark-findings.md  lessons.md  lexicon-benchmark-plan.md  lexicon-reverse-engineering.md  lexicon-wiki.md  repo-overview.md  tech-stack-reference.md  todo.md  ui-architecture.md
mockup/: index.html
pioneer-library/: Cargo.toml
pioneer-library/src/: lib.rs  queries.rs  schema.rs
pioneer-test-ui/: Cargo.toml  README.md  dev.sh  tauri.conf.json
pioneer-test-ui/capabilities/: default.json
pioneer-test-ui/frontend/: app.js  index.html  style.css  waveform
pioneer-test-ui/src/: dto.rs  main.rs
pioneer-test-ui/src/analyzer/: mod.rs  waveform.rs
pioneer-usb-writer/: .gitignore  Cargo.toml  README.md
pioneer-usb-writer/examples/: dump_rekordbox_playlist.rs
pioneer-usb-writer/reference-code/: PIONEER.md
pioneer-usb-writer/reference-code/export/: pipeline.rs
pioneer-usb-writer/reference-code/pdb/: mod.rs  types.rs
pioneer-usb-writer/src/: analyzer.rs  lib.rs  main.rs  models.rs  scanner.rs  waveform.rs
pioneer-usb-writer/src/reader/: anlz.rs  masterdb.rs  mod.rs  usb.rs
pioneer-usb-writer/src/writer/: anlz.rs  filesystem.rs  mod.rs  onelibrary.rs  pdb.rs  sync.rs
reference-code/: PIONEER.md
reference-code/model/: playlist.rs  track.rs
reference-code/pdb/: strings.rs  writer.rs
src/: main.rs  models.rs  scanner.rs
src/writer/: anlz.rs  filesystem.rs  pdb.rs
ui/waveform/: README.md  WaveformDisplay.js  current_track.flac  dev.html  rekordbox.json  waveform.css
ui/waveform/dev/: dev.html  waveform.css
ui/waveform/dev/scripts/: compare_anlz.py  compare_waveforms.py  fit_transform.py  test_filterbank.py
