[project]
name = "fourfour-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "librosa",
    "soundfile",
    "mutagen",
    "deeprhythm",
    "click",
]

[project.scripts]
fourfour-analyze = "fourfour_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fourfour_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
