[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fourfour-analysis"
version = "0.1.0"
description = "Audio analysis CLI for Pioneer DJ USB drives — BPM, key, energy, waveforms, cue points"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "soundfile>=0.12",
    "essentia",
    "torch>=2.0",
    "librosa>=0.10",
    "deeprhythm>=0.0.13",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[project.scripts]
fourfour-analyze = "fourfour_analysis.cli:analyze_main"
fourfour-benchmark = "fourfour_analysis.cli:benchmark_main"

[tool.hatch.build.targets.wheel]
packages = ["src/fourfour_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
