[package]
name = "pioneer-library"
version = "0.1.0"
edition = "2024"

[lib]
name = "pioneer_library"
path = "src/lib.rs"

[dependencies]
pioneer-usb-writer = { path = "../pioneer-usb-writer" }
rusqlite = { version = "0.33", features = ["bundled"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
