[package]
name = "pioneer-usb-writer"
version = "0.1.0"
edition = "2024"

[lib]
name = "pioneer_usb_writer"
path = "src/lib.rs"

[[bin]]
name = "pioneer-usb-writer"
path = "src/main.rs"

[dependencies]
# Audio analysis
stratum-dsp = "1.0.0"

# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "pcm", "aiff"] }

# Metadata reading
lofty = "0.24"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Progress bars
indicatif = "0.17"

# Database
rusqlite = { version = "0.33", features = ["bundled-sqlcipher"] }

# Walkdir for scanning
walkdir = "2"
image = "0.25.10"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
