[package]
name = "pioneer-usb-writer"
version = "0.1.0"
edition = "2024"

[lib]
name = "pioneer_usb_writer"
path = "src/lib.rs"

[dependencies]
# Metadata reading
lofty = "0.24"

# Error handling
anyhow = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled-sqlcipher"] }

# Walkdir for scanning
walkdir = "2"
image = "0.25.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
